schema/testdata/errors/set_attribute_ctx_identity_invalid_fields.keel
model UserExtension {
    fields {
        unknown Text
    }

    actions {
        create createExt() {
            //expect-error:55:62:E020:'unknown' not found on 'Identity'
            @set(userExtension.unknown = ctx.identity.unknown)
        }
        update updateExt(id) {
            //expect-error:55:62:E020:'unknown' not found on 'Identity'
            @set(userExtension.unknown = ctx.identity.unknown)
        }
    }
}
